syntax = "proto3";

package greeter;

option go_package = "./greeterpb";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}
